Re-added patch for 10.6 only. Fixed g95 variant conflict.
Port now works (in some basic sense) on MacPorts 1.9.1, OSX 10.6.4
x86_64, XCode 3.2.3, +gcc44 (at least; possibly more).

Still does not work on 10.5 (or, possibly 10.6 pre XCode 3.2.3),
due to bugs in progress:

[1] < http://savannah.gnu.org/bugs/?30668 >
[2] < http://savannah.gnu.org/bugs/?30685 >


git-svn-id: https://svn.macports.org/repository/macports/trunk@71264 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/octave-devel/Portfile
+++ b/dports/math/octave-devel/Portfile
@@ -62,7 +62,12 @@ if {${build_arch} == "i386" || ${build_arch} == "ppc"} {
     # allow non-Apple compilers to work with FLTK by removing the
     # -arch flag, which means this port cannot easy compile as
     # universal.
-    patchfiles patch-configure.diff
+    patchfiles-append patch-configure.diff
+}
+
+platform darwin 10 {
+    # for 10.6 only
+    patchfiles-append patch-lo-specfun.cc.diff
 }
 
 universal_variant   no
@@ -141,7 +146,7 @@ variant gcc45 description {build with the macports gcc45 toolchain} conflicts gc
     configure.compiler      macports-gcc-4.5
 }
 
-variant g95 description {build with g95} conflicts gcc43 gcc44 {
+variant g95 description {build with g95} conflicts gcc43 gcc44 gcc45 {
     depends_build-append    port:g95
     configure.f77           "${prefix}/bin/g95"
 }
