archivers/star: Update to version 1.5.1, #26198 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71265 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/star/Portfile
+++ b/dports/archivers/star/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			star
-version			1.5a89
+version			1.5.1
 categories		archivers
 platforms		darwin
 maintainers		mww
@@ -11,14 +11,14 @@ description		fast and POSIX 1003.1 conformant tar implementation
 long_description	${description}
 
 homepage		http://cdrecord.berlios.de/old/private/star.html
-master_sites		ftp://ftp.berlios.de/pub/star/alpha/
-checksums		sha1 03fa2f7cdc1890f11c6b83a1806a92a9599ddcde
+master_sites		ftp://ftp.berlios.de/pub/star
+checksums		sha1 62ba0e0a995fc5deb492b025ecffe58735574b8a
 patchfiles		patch-RULES__rules.prg.diff
 use_bzip2		yes
 
 depends_build	port:smake
 
-worksrcdir		star-1.5
+worksrcdir		star-${version}
 
 use_configure	no
 
@@ -41,4 +41,3 @@ post-destroot {
 universal_variant no
 
 livecheck.type	freshmeat
-
