py26-chardet: update to version 2.0.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@71270 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-chardet/Portfile
+++ b/dports/python/py26-chardet/Portfile
@@ -4,7 +4,7 @@ PortSystem        1.0
 PortGroup         python26 1.0
 
 name              py26-chardet
-version           1.0
+version           2.0.1
 categories        python devel
 platforms         darwin
 maintainers       openmaintainer brett
@@ -14,6 +14,6 @@ long_description  Character encoding auto-detection in Python. \
 
 homepage          http://chardet.feedparser.org/
 master_sites      http://chardet.feedparser.org/download/
-checksums         md5 29f69d097052a4eae3774382c234cf2b
+checksums         md5 ec771971bab5dd1943a10362ebd2fd4c
 extract.suffix    .tgz
-distname          chardet-${version}
+distname          python2-chardet-${version}
