--- a/dports/devel/mpfr/Portfile
+++ b/dports/devel/mpfr/Portfile
@@ -9,7 +9,7 @@ PortGroup  muniversal 1.0
 
 name                mpfr
 set base_version    3.0.0
-set patch_level     3
+set patch_level     4
 version             ${base_version}-p${patch_level}
 #version             ${base_version}
 categories          devel math
@@ -43,6 +43,10 @@ checksums \
         md5     e125480be61ad2f20bd75a25e43a54f4 \
         sha1    f30cf103229b85137a5f3f368e174209ff4fa8e3 \
         rmd160  79712f3b0d1cb1607a2a5988c980376cd6d23f10 \
+    patch04 \
+        md5     05bd04f54ffcdb3cbffb6da9e7989427 \
+        sha1    b41b1f26ddd0917c024c573d9612b2af1451299f \
+        rmd160  44a2c624382d98b605d0ab6b09c94e691725d906 \
     [suffix ${distname}] \
         md5     f45bac3584922c8004a10060ab1a8f9f \
         sha1    8ae8bc72ac26a0f17ad9f57c520264c056c64770 \
