xorg-libX11: Use ghostscript for ps2pdf
git-svn-id: https://svn.macports.org/repository/macports/trunk@71274 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libX11/Portfile
+++ b/dports/x11/xorg-libX11/Portfile
@@ -55,11 +55,11 @@ build.args V=1
 variant docs description "Install extra documentation" {
 	depends_build-append \
 		port:groff \
-		port:ps2pdf
+		port:ghostscript
 
 	depends_skip_archcheck-append \
 		groff \
-		ps2pdf
+		ghostscript
 
 	configure.args-delete \
 		--without-groff \
