xorg-sgml-doctools: noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@71275 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-sgml-doctools/Portfile
+++ b/dports/x11/xorg-sgml-doctools/Portfile
@@ -10,6 +10,7 @@ description	X.org xorg-sgml-doctools
 homepage	http://www.x.org
 platforms	darwin macosx
 long_description SGML Magic for X11 documentation
+supported_archs noarch
 master_sites	 http://xorg.freedesktop.org/archive/individual/doc/
 
 checksums           md5     1cd2d8213ee71ebdbefce45c9da54762 \
