--- a/dports/gnome/libbonoboui/Portfile
+++ b/dports/gnome/libbonoboui/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            libbonoboui
 version         2.24.3
-revision        1
+revision        2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -29,24 +29,24 @@ checksums           md5     3a754b1df0a4d5fd4836a05020a0bb4a \
                     rmd160  69948f05157f4fef76d3bc0d41aaa98ef3c4ea50
 
 depends_build \
-    port:pkgconfig
+    port:pkgconfig \
+    port:intltool
 
 depends_lib \
     port:gconf \
-    path:lib/pkgconfig/glib-2.0.pc:glib2 \
-    port:gnome-vfs \
-    port:gtk2 \
-    port:xorg-libice \
-    port:xorg-libsm \
     port:libbonobo \
     port:libglade2 \
     port:libgnomecanvas \
-    port:libgnome \
-    port:dbus \
-    port:dbus-glib \
-    port:libiconv \
-    port:libxml2 \
-    port:gettext
+    port:libgnome
+
+configure.args  --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib
+
+variant no_x11 {
+    configure.args-delete --x-includes=${prefix}/include \
+                          --x-libraries=${prefix}/lib
+    configure.args-append --without-x
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
