xorg-server-devel: Pull in xorg-sgml-doctools to build more documentation
git-svn-id: https://svn.macports.org/repository/macports/trunk@71279 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -114,7 +114,13 @@ variant docs description "Install extra documentation" {
 	depends_build-append \
 		port:doxygen \
 		port:fop \
-		port:xmlto
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		doxygen \
+		fop \
+		xmlto
 
 	configure.args-delete \
 		--without-doxygen \
@@ -123,15 +129,10 @@ variant docs description "Install extra documentation" {
 		--disable-devel-docs 
 
 	configure.args-append \
-		--with-doxygen
+		--with-doxygen \
 		--with-fop \
 		--with-xmlto \
 		--enable-devel-docs
-
-	depends_skip_archcheck-append \
-		doxygen \
-		fop \
-		xmlto
 
 	configure.env-append \
 		DOXYGEN="${prefix}/bin/doxygen" \
