libbonoboui: add dependency on popt.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71280 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libbonoboui/Portfile
+++ b/dports/gnome/libbonoboui/Portfile
@@ -37,7 +37,8 @@ depends_lib \
     port:libbonobo \
     port:libglade2 \
     port:libgnomecanvas \
-    port:libgnome
+    port:libgnome \
+    port:popt
 
 configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
