--- a/dports/sysutils/syslog-ng/Portfile
+++ b/dports/sysutils/syslog-ng/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name			syslog-ng
 version			3.0.8
-revision		1
+revision		2
 categories		sysutils
 platforms		darwin
 maintainers		markd openmaintainer
@@ -30,7 +30,7 @@ depends_lib			port:eventlog \
 
 startupitem.create      yes
 startupitem.executable  ${prefix}/sbin/syslog-ng
-startupitem.pidfile clean --pidfile=${prefix}/var/syslog-ng.pid
+startupitem.pidfile clean ${prefix}/var/syslog-ng.pid
 
 configure.args		--mandir=${prefix}/share/man \
 			--enable-dynamic-linking \
