--- a/dports/python/py27-pil/Portfile
+++ b/dports/python/py27-pil/Portfile
@@ -5,6 +5,7 @@ PortGroup python27 1.0
 
 name            py27-pil
 version         1.1.7
+revision        1
 license         MIT
 maintainers     jmr openmaintainer
 description     Python Imaging Library
@@ -21,7 +22,7 @@ distname        Imaging-${version}
 checksums       md5 fc14a54e1ce02a0225be8854bfba478e \
                 sha1 76c37504251171fda8da8e63ecb8bc42a69a5c81 \
                 rmd160 9af570fe100e250a4860314341fe3e6d695d7fde
-patchfiles      patch-setup.py
+patchfiles      patch-setup.py pil-2009-raclette-fb7ce579f5f9.diff
 
 depends_lib-append  port:freetype \
                     port:jpeg \
