python26: temporarily make +no_tkinter a default variant to work around the dependency loop caused by xorg-xcb-proto (#26387)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71286 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/python26/Portfile
+++ b/dports/lang/python26/Portfile
@@ -172,6 +172,8 @@ variant no_tkinter description {Disable Tkinter support, which will break IDLE} 
    depends_lib-delete   port:tk 
 }
 
+# ugh... temporary fix for a dependency loop, #26387
+default_variants +no_tkinter
 
 livecheck.type          regex
 livecheck.url           ${homepage}download/releases/
