--- a/dports/news/hellanzb/Portfile
+++ b/dports/news/hellanzb/Portfile
@@ -6,7 +6,7 @@ PortGroup           python26 1.0
 
 name             hellanzb
 version          0.13
-revision        1
+revision         2
 categories       news python
 maintainers      groovie.org:pjenvey
 description      Nzb downloader and post processor
@@ -30,7 +30,8 @@ depends_run      bin:par2:par2 \
                  port:py26-twisted \
                  port:py26-openssl
 
-patchfiles       patch-hellanzb.py.diff
+patchfiles       patch-hellanzb.py.diff \
+                 patch-hellanzb_for_twisted-10.0.0.diff
 
 variant no_ssl description {Disable ssl support} {
     depends_run-delete  port:py26-openssl
