devel/gmake upgraded version from 3.81 to 3.82 (maintainer timeout on ticket #26279)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71289 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gmake/Portfile
+++ b/dports/devel/gmake/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name            gmake
-version         3.81
+version         3.82
 categories      devel
 maintainers     waqar
 description     GNU Make
@@ -19,7 +19,9 @@ homepage        http://www.gnu.org/software/make/make.html
 platforms       darwin
 distname        make-${version}
 master_sites    gnu:make
-checksums       sha1 41ed86d941b9c8025aee45db56c0283169dcab3d
+checksums           md5     1a11100f3c63fcf5753818e59d63088f \
+                    sha1    b8a8a99e4cb636a213aad3816dda827a92b9bbed \
+                    rmd160  e3d1f7019549553b9fc7a88884c9b85d25a60d21
 use_bzip2       yes
 configure.args  --program-prefix=g \
                 --infodir=${prefix}/share/info \
