--- a/dports/graphics/gimp/Portfile
+++ b/dports/graphics/gimp/Portfile
@@ -34,9 +34,19 @@ platform macosx {
     # these use the deprecated QuickDraw API that is not available
     # in a 64-bit version - ticket #21391
     #
-    if { "darwin" == ${os.platform} && ![string match *64* $build_arch] } {
-        depends_lib-append  port:macclipboard-gimp \
-                            port:macfile-gimp
+    # if +quartz is set, remove ufraw which uses CMFlattenProfile if gtk2 is
+    # built with Quartz support and is also not availabe in a 64-bit version 
+    # ticket #23675 
+    #
+    if { "darwin" == ${os.platform} } { 
+        if { ![string match *64* $build_arch] } {
+            depends_lib-append  port:macclipboard-gimp \
+                                port:macfile-gimp
+        } else {
+            if {[variant_isset quartz]} {
+                depends_lib-delete port:ufraw
+            }
+        }
     }
 }
 
@@ -58,6 +68,8 @@ variant animation description "Include the Gimp Animation Package (gimp-gap)." {
 variant manual description {Include the help files.} {
     depends_lib-append  port:gimp-user-manual
 }
+
+variant quartz {}
 
 livecheck.type  regex
 livecheck.url   ftp://ftp.gimp.org/pub/gimp/v${branch}/
