--- a/dports/multimedia/tovid/Portfile
+++ b/dports/multimedia/tovid/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                tovid
 version             0.31
-revision        1
+revision        2
 categories          multimedia
 maintainers         shah.co.nz:macports
 description         a collection of GPL video disc authoring tools
@@ -14,8 +14,10 @@ long_description    ${description}, tovid can help you create your own DVDs, \
 homepage            http://tovid.wikia.com/
 
 platforms           darwin
+
+# Use mplayer-devel as mplayer does not build on Snow Leopard
 depends_lib         port:txt2tags \
-                    port:MPlayer \
+                    path:bin/mplayer:mplayer-devel \
                     port:ffmpeg \
                     port:mjpegtools \
                     port:ImageMagick \
