libebml: enable universal and non-default-build_arch builds; see #21154
git-svn-id: https://svn.macports.org/repository/macports/trunk@71295 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/libebml/Portfile
+++ b/dports/textproc/libebml/Portfile
@@ -26,9 +26,17 @@ post-extract {
 
 use_configure       no
 
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cxxflags}
+} else {
+    set archflags ${configure.cxx_archflags}
+}
+
 build.dir           ${worksrcpath}/make/darwin
 build.args          prefix=${prefix} \
-                    CXX=${configure.cxx}
+                    CXX=${configure.cxx} \
+                    CXXFLAGS="${archflags}"
 
 # We need -p for install because ld will ask for ranlib if the modification date changes.
 destroot.args       INSTALL_OPTS_LIB='-m 644 -p'
