libmatroska: enable universal and non-default-build_arch builds; see #21154
git-svn-id: https://svn.macports.org/repository/macports/trunk@71296 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libmatroska/Portfile
+++ b/dports/multimedia/libmatroska/Portfile
@@ -29,9 +29,17 @@ post-extract {
 
 use_configure       no
 
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cxxflags}
+} else {
+    set archflags ${configure.cxx_archflags}
+}
+
 build.dir           ${worksrcpath}/make/darwin
 build.args          prefix=${prefix} \
                     CXX=${configure.cxx} \
+                    CXXFLAGS="${archflags}" \
                     LIBEBML_INCLUDE_DIR=${prefix}/include \
                     LIBEBML_LIB_DIR=${prefix}/lib
 
