--- a/dports/multimedia/libmatroska/Portfile
+++ b/dports/multimedia/libmatroska/Portfile
@@ -21,7 +21,7 @@ checksums           md5     4efcf3945b17a6f0320cf1aaa326a4de \
                     sha1    1f58217968a081bd550ec06f2d6beb81a7a3ac68 \
                     rmd160  fb6e3a775fa611cbfbab3f178a3170cb6544d51e
 
-depends_lib         lib:libebml.a:libebml
+depends_build       port:libebml
 
 post-extract {
     system "cd ${worksrcpath}/make && cp -R linux darwin"
