py27-virtualenv, py27-pyqt4: fix maintainer (lone openmaintainer => nomaintainer)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71298 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-virtualenv/Portfile
+++ b/dports/python/py27-virtualenv/Portfile
@@ -8,7 +8,7 @@ name                py27-virtualenv
 version             1.4.9
 categories-append   devel
 platforms           darwin
-maintainers         openmaintainer
+maintainers         nomaintainer
 homepage            http://pypi.python.org/pypi/virtualenv
 description         Virtual Python Environment builder
 long_description    virtualenv is a tool to create isolated Python \
