--- a/dports/python/py27-pyqt4/Portfile
+++ b/dports/python/py27-pyqt4/Portfile
@@ -7,7 +7,7 @@ name		py27-pyqt4
 version		4.7.5
 categories	python devel
 platforms	macosx
-maintainers     openmaintainer
+maintainers     nomaintainer
 description	PyQt4 is a set of Python bindings for the Qt4 toolkit
 long_description \
 		PyQt4 is a set of Python bindings for the Qt4 toolkit. The \
