--- a/dports/x11/wxgtk/Portfile
+++ b/dports/x11/wxgtk/Portfile
@@ -4,8 +4,7 @@ PortSystem      1.0
 
 name            wxgtk
 conflicts       wxWidgets wxWidgets-python
-version         2.8.4
-revision        3
+version         2.8.11
 categories      x11
 platforms       darwin
 maintainers     nomaintainer
@@ -18,7 +17,9 @@ homepage        http://wxwidgets.org/
 master_sites    sourceforge:wxwindows
 distname        wxGTK-${version}
 
-checksums       md5 22e42c1601d9759530c875ffa2c3c554
+checksums       md5     6040933d200037f90f6aa1c5169e7ec6 \
+                sha1    e979d9d2b1ee5bd10e90fd00b02f3306327c661a \
+                rmd160  8028caed3be9ff5793dc7eab015d88d6c945f66d
 
 use_bzip2       yes
 
@@ -29,8 +30,7 @@ depends_lib     port:gtk2 \
                 port:freetype \
                 port:zlib
 
-patchfiles      patch-Makefile.in \
-                patch-gsocket.diff
+patchfiles      patch-Makefile.in
 
 # g++-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
 universal_variant no
