multimedia/lmms: Update to version 0.4.8, add cmake options to avoid automatic detection
git-svn-id: https://svn.macports.org/repository/macports/trunk@71301 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/lmms/Portfile
+++ b/dports/multimedia/lmms/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                lmms
-version             0.4.5
-revision            1
+version             0.4.8
 categories          multimedia
 maintainers         nomaintainer
 
@@ -19,23 +18,37 @@ master_sites        sourceforge
 #parallel build seems broken :(
 use_parallel_build  no
 use_bzip2           yes
-checksums           md5     6d58d73b44baddadc4f0ac6464fbd530 \
-                    sha1    b26299c027b1e7f228e4d0110beb4b0a968eecb8 \
-                    rmd160  ad75e29a8c94f82e1178eacd838d524177bc3896
+checksums           md5     8573b8376808c77c058cca3a57a36d8d \
+                    sha1    851021270157d3eda15c6b6dae8a71ab47db24cd \
+                    rmd160  8319667b7c65dc4b14022ebe2d76b39e11703f1f
 
-#disable VST because it is not supported on OS X
-configure.args-append   -DWANT_VST=off
-
+depends_build       port:pkgconfig
 depends_lib         port:libsndfile \
                     port:qt4-mac \
                     path:lib/pkgconfig/sdl.pc:libsdl \
                     port:fftw-3-single \
-                    port:fluidsynth
+                    port:fluidsynth \
+                    port:jack
+
+patchfiles          patch-qt-include.diff
 
 # Disable zynaddsubfx plugin on x86_64 as the included fltk does not build
 if {${configure.build_arch} == "x86_64"} {
-    patchfiles patch-disable-zynaddsubfx.diff
+    patchfiles-append patch-disable-zynaddsubfx.diff
 }
+
+# Use bundled libsamplerate due to link problems with the external library
+configure.args-append -DWANT_SYSTEM_SR=OFF
+# Disable VST because it is not supported on OS X
+configure.args-append -DWANT_VST=OFF
+
+configure.args-append -DWANT_ALSA=OFF \
+                      -DWANT_PULSEAUDIO=OFF \
+                      -DWANT_FFTW3F=ON \
+                      -DWANT_SDL=ON \
+                      -DWANT_OGGVORBIS=ON \
+                      -DWANT_STK=OFF \
+                      -DWANT_JACK=ON
 
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/projects/${name}/files/
