--- a/dports/php/php5-oauth/Portfile
+++ b/dports/php/php5-oauth/Portfile
@@ -3,8 +3,7 @@
 PortSystem      1.0
 PortGroup       php5extension 1.0
 
-php5extension.setup oauth 0.99.9 pecl
-revision        1
+php5extension.setup oauth 1.0.0 pecl
 license         BSD
 categories      php devel
 platforms       darwin
@@ -16,11 +15,12 @@ long_description \
     applications to securely access data without having to store usernames and \
     passwords.
 
-checksums       md5     7a93f01d31076ea4eda87d95e658ce76 \
-                sha1    179b872373fedb521f01ef3aeb3587a8ba33e39c \
-                rmd160  ace7defa4dbacee8048a1496558e99c6e45f381e
+checksums       md5     7cf9652847f589f066cb4c36aebf9177 \
+                sha1    92fffae4eab67f1970f4b720ad3520376e52c0cf \
+                rmd160  d11ee1f97745b3647e6d20ef5c9aaf2a5234f17f
 
 depends_lib-append \
+    port:gettext \
     port:curl
 
 post-destroot {
