multimedia/libquicktime: Add missing xorg-libXaw dependency (overriding maintainer, port is broken)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71304 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libquicktime/Portfile
+++ b/dports/multimedia/libquicktime/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			libquicktime
 version			1.1.5
+revision                1
 categories		multimedia
 platforms		darwin
 maintainers		mww
@@ -16,7 +17,7 @@ checksums           md5     0fd45b3deff0317c2f85a34b1b106acf \
                     sha1    11dad92fe9dbb67aa8ef42c3404d3acba7ae2a37 \
                     rmd160  c76c86cbf6cc29b3a5f742aee87c3e4fe2d383ad
 
-depends_lib		port:gettext port:jpeg port:libiconv port:libpng port:zlib path:lib/libavcodec.dylib:ffmpeg port:faac port:faad2 port:libvorbis port:libogg port:lame port:xorg-libXv
+depends_lib		port:gettext port:jpeg port:libiconv port:libpng port:zlib path:lib/libavcodec.dylib:ffmpeg port:faac port:faad2 port:libvorbis port:libogg port:lame port:xorg-libXv port:xorg-libXaw
 
 configure.args		--without-gtk --without-alsa \
 			--with-libjpeg --with-libpng --with-ffmpeg \
