--- a/dports/net/zabbix/Portfile
+++ b/dports/net/zabbix/Portfile
@@ -3,8 +3,7 @@
 PortSystem	1.0
 
 name			zabbix
-version			1.6.8
-revision		4
+version			1.8.2
 categories		net
 maintainers		markd openmaintainer
 platforms		darwin
@@ -13,10 +12,10 @@ description		An open source application and network monitor
 
 long_description	${description}
 
-homepage		http://www.zabbix.com
+homepage		http://www.zabbix.com/
 master_sites		sourceforge
-checksums		md5 3255afd2d44454bae3ec5158920a824f
-patchfiles		patch-include-common.h
+checksums		md5 fa4be4fa7ac20a33cc0aa5c27b827746
+patchfiles	patch-src-zabbix_server-poller-checks_snmp.c.diff
 depends_lib		port:fping \
 			port:curl \
 			port:openssl
@@ -176,12 +175,9 @@ if { [variant_isset agent_only] } {
 			${destroot}${prefix}/share/zabbix/zabbix_agent_win32
 }
 
-post-activate {
 
-if { [variant_isset agent_only] } {
-
-ui_msg "\n#### To complete the ZABBIX agent installation ####
-
+notes \
+"#### ZABBIX agent installation section (steps 1 - 3 only) ####
 
 1) Edit the sample .conf file ${prefix}/etc/zabbix/zabbix_agentd.conf (rename & omit .sample)
 
@@ -202,31 +198,25 @@ ui_msg "\n#### To complete the ZABBIX agent installation ####
    installation on Windows NT 4.0, Windows 2000, and Windows XP.
 
 
-\n"
-
-} else {
-
-ui_msg "\n#### To complete the ZABBIX installation ####
+#### End ZABBIX agent installation section ####
+####                                       ####
 
 
-1) Setup MySQL (for new MySQL installs)
+####                                          ####
+#### Begin ZABBIX server installation section ####
 
--Configure MySQL:
-        sudo -u mysql ${prefix}/lib/mysql5/bin/mysql_install_db
 
--Start MySQL and set it to run at system boot:
-        sudo launchctl load -w /Library/LaunchDaemons/org.macports.mysql5.plist
+1) Setup MySQL, i.e. via MacPorts:
 
--Set a root MySQL password
-   Follow the instructions that were given after you executed 'mysql_install_db' above
+	sudo port install mysql5-server
 
 
 2) Setup the ZABBIX MySQL database
 
 -Create the ZABBIX database
 	mysql5 -u root -p (enter password at prompt)
-	mysql> create database zabbix;
-	mysql> exit;
+	mysql> create database zabbix character set utf8;
+	mysql> quit;
 
 -Import the ZABBIX Schema
 	cd ${prefix}/share/zabbix/schema
@@ -237,11 +227,10 @@ ui_msg "\n#### To complete the ZABBIX installation ####
 
 -Create a MySQL 'zabbix' user and password
 	mysql5 -u root -p
-	mysql> grant SELECT, INSERT, UPDATE, DELETE, CREATE on zabbix.* to zabbix@localhost;
-	mysql> grant SELECT, INSERT, UPDATE, DELETE, CREATE on zabbix.* to zabbix;
-	mysql> set PASSWORD FOR zabbix@localhost = OLD_PASSWORD('zabbix-db-password');
+	mysql> grant all privileges on zabbix.* to zabbix@localhost identified by '<zabbix-mysql-password>';
+	mysql> grant all privileges on zabbix.* to zabbix identified by '<zabbix-mysql-password>';
+	mysql> quit;
 
-NOTE: ZABBIX uses MySQL old-style password hashes so the OLD_PASSWORD keyword is necessary
 
 3) Edit the sample .conf file ${prefix}/etc/zabbix/zabbix_server.conf (rename & omit .sample)
 
@@ -252,17 +241,9 @@ NOTE: ZABBIX uses MySQL old-style password hashes so the OLD_PASSWORD keyword is
 	DBPassword=<zabbix-mysql-password>
 
 
-4) Install PHP 4 or 5 (not covered)
+4) Install PHP 5, i.e. via MacPorts:
 
-   Set mysql.default_socket path to ${prefix}/var/run/mysql5/mysqld.sock in this PHP file:
-
-	./phpx/lib/php.ini (in /usr/local, ${prefix}, or /Library depending on PHP package)
-
-   Modify the variables below in this Zabbix file:
-	${prefix}/share/zabbix/frontends/php/include/db.inc.php
-
-	\$DB_USER        =\"zabbix\";
-	\$DB_PASSWORD    =\"mysql-zabbix-password\";
+	sudo port install php5 php5-gd php5-mbstring php5-mysql php5-sockets
 
 
 5) Set a symbolic link in your Apache document root pointing to the PHP frontend files
@@ -276,18 +257,15 @@ NOTE: ZABBIX uses MySQL old-style password hashes so the OLD_PASSWORD keyword is
 
    To start Zabbix manually, use: ${prefix}/share/zabbix/zabbix_server.init start (stop|status)
 
+	Note: Eventually your shared memory has to be increased (see http://www.zabbix.org/forum/showthread.php?p=64232)!
+
 
 7) A Win32 agent is in ${prefix}/share/zabbix/zabbix_agent_win32 for
    installation on Windows NT 4.0, Windows 2000, and Windows XP.  See
    the ReadMe.txt for instructions.
 
 
-8) Login at http://localhost/zabbix with default user 'admin' with no password, then
-   be sure to read the manual: http://www.zabbix.com/manual/v1.1/index.php
+8) Open http://localhost/zabbix/ in your browser and walk through the setup, then login with default user 'Admin' and password 'zabbix'.
 
-\n"
-# End else clause
 
-}
-}
-
+9) Read the fine manual at http://www.zabbix.com/documentation/"
