php5-gearman: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71307 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-gearman/Portfile
+++ b/dports/php/php5-gearman/Portfile
@@ -14,3 +14,5 @@ long_description        Library to provide API for communicating with gearmand, 
 checksums               md5     2e1da4a3d5e3c1e103b772da92f37680
 
 depends_lib-append      port:gearmand
+
+livecheck.regex {(\d+(?:\.\d+)*)</a></th>}
