seahorse: update to version 2.30.1, configuration, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71311 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/seahorse/Portfile
+++ b/dports/gnome/seahorse/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		seahorse
-version		2.26.2
+version		2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Seahorse is a GNOME application for managing encryption keys.
 long_description \
@@ -18,24 +18,22 @@ homepage	http://projects.gnome.org/${name}/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
 
-checksums       md5     c5126bd7ddfda3317daa71c06f261034 \
-                sha1    04484352e92fc2faa6f06ee6f4eb21828931f173 \
-                rmd160  9193e5c14244f1a1463c6479bf31bb7d20a1a1bb
+checksums       md5     b332279b34acca952807e31534fec592 \
+                sha1    1754a447d48837bc8a0a657a6bcdd65666704ccb \
+                rmd160  70cdcc18798e405deb0164d098c57d22adc2f5f5
 
-depends_lib	\
-                port:gpgme \
-                port:gnome-keyring \
-		port:libglade2 \
+depends_build	port:pkgconfig \
+                port:intltool \
+                port:gnome-doc-utils
+
+depends_lib	port:gpgme \
+                port:gconf \
 		port:libsoup \
 		port:libnotify \
-                bin:ssh:openssh
+                port:openssh
 
-depends_build	\
-		port:p5-xml-parser \
-		port:shared-mime-info
-
-configure.ldflags-append -lpth
-configure.args  --disable-sharing \
+configure.args  --disable-introspection \
+                --disable-sharing \
                 --disable-update-mime-database \
                 --disable-schemas-install \
                 --disable-scrollkeeper
