seahorse-plugins: update to version 2.30.1, remove outdated +gedit +epiphany variants.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71312 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/seahorse-plugins/Portfile
+++ b/dports/gnome/seahorse-plugins/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name		seahorse-plugins
-version		2.26.2
-revision    1
+version		2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Seahorse plugins.
 long_description ${description}
@@ -16,17 +15,16 @@ homepage	http://www.gnome.org/projects/seahorse/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
 
-checksums       md5     36b51b866fc729526f1be86bb0db7370 \
-                sha1    df5cae9c19cd106fafc65d95b8d0d57bbd6a12db \
-                rmd160  99659c47d880a02b5ab25289f1d459c7d1472c51
+checksums       md5     cb8a86a1039054b621f6419ac2219695 \
+                sha1    d06c638e839024ab623dc001b3c4e43be293ede8 \
+                rmd160  a493ccad1d25c7c112f33c30d141a241eaf71048
 
-depends_build   port:p5-xml-parser \
+depends_build   port:pkgconfig \
                 port:intltool \
                 port:gnome-doc-utils \
 
 depends_lib     port:seahorse \
                 port:nautilus \
-                port:openssl \
                 port:gnome-panel
 
 configure.args  --disable-epiphany \
@@ -35,16 +33,6 @@ configure.args  --disable-epiphany \
                 --disable-schemas-install \
                 --disable-scrollkeeper
                 
-variant epiphany description {Enable epiphany plug-in} {
-        depends_lib-append port:epiphany
-        configure.args-delete --disable-epiphany
-}
-
-variant gedit description {Enable gedit plug-in} {
-        depends_lib-append port:gedit
-        configure.args-delete --disable-gedit
-}
-
 post-activate {
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
     system "${prefix}/bin/scrollkeeper-update"
