multimedia/avidemux: Update to version 2.5.3 Adding lots of patches and new variants; using GTK+ for the GUI as Qt4 frontend did not build; disabling bundles as they did not work reliable in testing and caused crashes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71313 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/avidemux/Portfile
+++ b/dports/multimedia/avidemux/Portfile
@@ -1,40 +1,166 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           cmake 1.0
 
 name                avidemux
-version             2.4.4
+version             2.5.3
 categories          multimedia
 platforms           darwin
 maintainers         nomaintainer
 homepage            http://avidemux.sourceforge.net/
-description         Avidemux is an avi and mpeg editing program.
+description         Avidemux is a free video editor
 
-long_description    Avidemux is an avi and mpeg editing program capable of \
-                    splicing movies together, and chopping movies apart.
+long_description    Avidemux is a free video editor designed for simple cutting, \
+                    filtering and encoding tasks. It supports many file types, \
+                    including AVI, DVD compatible MPEG files, MP4 and ASF, \
+                    using a variety of codecs. Tasks can be automated using \
+                    projects, job queue and powerful scripting capabilities. 
 
 master_sites        sourceforge
 distname            ${name}_${version}
-checksums           md5 503dfd25842ef81be7c769811e7bc54e \
-                    sha1 c50a00caf13a8ea1053e5994edeb59354192e18e \
-                    rmd160 8bb2705b3e2d5379d833ec4fa06a01b897c06e04 
+checksums           md5     5a688029895b66b65ca86b7c85a03ee3 \
+                    sha1    073e20007ba5097790cf84cf94b6002c54953395 \
+                    rmd160  680963060cdb959d1791a4c0d481eed0e426214d
 
-depends_lib         port:gtk2 \
-                    port:libmad \
-                    port:libvorbis \
-                    port:libxml2
+depends_build-append \
+                    port:cmake \
+                    port:pkgconfig \
+                    port:yasm
 
-depends_build       port:cmake
+depends_lib-append  port:gtk2 \
+                    path:lib/pkgconfig/glib-2.0.pc:glib2 \
+                    port:spidermonkey \
+                    port:libxml2 \
+                    port:zlib \
+                    port:fontconfig \
+                    port:freetype
 
-patch.pre_args      -p1
-patchfiles          avidemux-2.4.4-cmake.patch
+patchfiles          patch-mangle-asm.diff \
+                    patch-cmake-use-sdl.diff \
+                    patch-build-plugins.diff \
+                    patch-ffmpeg-libs-naming.diff \
+                    patch-no-bundles.diff
 
-configure.cmd       cmake
-configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix} \
-                    -DCMAKE_C_FLAGS=\"${configure.cflags}\" \
-                    -DCMAKE_CXX_FLAGS=\"${configure.cxxflags}\" \
-                    -DCMAKE_INCLUDE_PATH=${prefix}/include \
-                    -DCMAKE_LIBRARY_PATH=${prefix}/lib
+# do a out of place build
+pre-configure {
+    file mkdir ${workpath}/build
+}
+configure.dir       ${workpath}/build
+configure.post_args ${worksrcpath}
+build.dir           ${workpath}/build
+destroot.dir        ${workpath}/build
+
+configure.args-append \
+                    -DMAC_BUNDLE_DIR=${applications_dir} \
+                    -DGTK=ON \
+                    -DQT4=OFF \
+                    -DFONTCONFIG=ON \
+                    -DGETTEXT=ON \
+                    -DUSE_SYSTEM_SPIDERMONKEY=ON \
+                    -DSPIDERMONKEY_INCLUDE_DIR=${prefix}/include/js \
+                    -DSPIDERMONKEY_LIBRARY_DIR=${prefix}/lib/libjs.dylib \
+
+# SDL uses Quickdraw API, fails on 64-bit
+# Xvideo is disabled for OS X, but probably could work
+# FIXME: No hardware acceleration at the moment
+configure.args-append \
+                    -DSDL=OFF \
+                    -DXVIDEO=OFF \
+
+# Drivers and codecs
+configure.args-append \
+                    -DALSA=OFF \
+                    -DARTS=OFF \
+                    -DESD=OFF \
+                    -DJACK=OFF \
+                    -DOSS=OFF \
+                    -DPULSEAUDIOSIMPLE=OFF \
+                    -DAFTEN=OFF \
+                    -DLAME=OFF \
+                    -DFAAC=OFF \
+                    -DVORBIS=OFF \
+                    -DFAAD=OFF \
+                    -DLIBVORBIS=OFF \
+                    -DXVID=OFF \
+                    -DX264=OFF
+
+# configure plugins
+configure.args-append \
+                    -DAVIDEMUX_SOURCE_DIR=${worksrcpath} \
+                    -DAVIDEMUX_INSTALL_PREFIX=${workpath}/build/ \
+                    -DAVIDEMUX_CORECONFIG_DIR=${workpath}/build/config/
+
+# build plugins
+post-build {
+    build.dir               ${workpath}/build/plugins
+    command_exec build
+}
+
+# destroot plugins
+post-destroot {
+    destroot.dir            ${workpath}/build/plugins
+    command_exec destroot
+}
+
+# binaries will be referencing unversioned .dylibs, so add symlinks
+post-destroot {
+    fs-traverse -tails f ${destroot}${prefix}/lib {
+        if [regexp {^(.*)\.\d+\.dylib$} $f -> fbase] {
+            ln -s $f ${destroot}${prefix}/lib/${fbase}.dylib
+        }
+    }
+}
+
+# FIXME: Add variant for qt4 frontend (does not compile yet)
+
+# Additional audio output drivers
+
+variant esd description {Enable ESounD audio output} {
+    depends_lib-append port:esound
+    configure.args-replace s/-DESD=OFF/-DESD=ON/
+}
+
+variant jack description {Enable JACK audio output} {
+    depends_lib-append port:jack
+    configure.args-replace s/-DJACK=OFF/-DJACK=ON/
+}
+
+# Support for additional audio and video libraries
+# XXX: additional support for aften exists, but no such port yet
+
+variant aac description {Enable AAC en-/decoding} {
+    depends_lib-append port:faac port:faad2
+    configure.args-replace s/-DFAAC=OFF/-DFAAC=ON/
+    configure.args-replace s/-DFAAD=OFF/-DFAAD=ON/
+}
+
+variant dts description {Enable DTS decoding} {
+    depends_lib-append port:libdca
+    configure.args-replace s/-DLIBDCA=OFF/-DLIBDCA=ON/
+}
+
+variant lame description {Enable MP3 encoding} {
+    depends_lib-append port:lame
+    configure.args-replace s/-DLAME=OFF/-DLAME=ON/
+}
+
+variant ogg description {Enable Ogg Vorbis en-/decoding} {
+    depends_lib-append port:libvorbis
+    configure.args-replace s/-DVORBIS=OFF/-DVORBIS=ON/
+    configure.args-replace s/-DLIBVORBIS=OFF/-DLIBVORBIS=ON/
+}
+
+variant x264 description {Enable H.264 encoding} {
+    depends_lib-append port:x264
+    configure.args-replace s/-DX264=OFF/-DX264=ON/
+}
+
+variant xvid description {Enable XviD encoding} {
+    depends_lib-append port:XviD
+    configure.args-append -DXVID=ON
+    configure.args-replace s/-DXVID=OFF/-DXVID=ON/
+}
 
 livecheck.type      regex
 livecheck.url       ${homepage}download.html
