gimp-app: add comment.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71317 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/gimp-app/Portfile
+++ b/dports/aqua/gimp-app/Portfile
@@ -74,6 +74,10 @@ If you are having problems viewing the help files when using Gimp.app,
        where LANG is your two-letters locale (fr, en, jp, ...)
 "
 
+#
+# gimp2 is not universal
+#
+
 universal_variant no
 
 variant quartz {
