gnet: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71319 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnet/Portfile
+++ b/dports/devel/gnet/Portfile
@@ -1,30 +1,37 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
-name		gnet
-version		1.1.8
-revision	2
-categories	devel
-maintainers	nomaintainer
-description	Simple network library
-homepage	http://live.gnome.org/GNetLibrary
-platforms	darwin
+PortSystem              1.0
 
-long_description GNet is a simple network library written in C.  It is \
-		 object-oriented, and built upon GLib.
+name                    gnet
+version                 1.1.8
+revision                2
+categories              devel
+platforms               darwin
+maintainers             nomaintainer
 
-master_sites	freebsd
+description             Simple network library
 
-checksums	md5 da2b5de278e96a5b907c2e2304bf6542
+long_description        GNet is a simple network library written in C.  It is \
+                        object-oriented, and built upon GLib.
 
-patchfiles	patch-gnet.m4
+homepage                http://live.gnome.org/GNetLibrary
+master_sites            freebsd
 
-configure.args	--mandir=${prefix}/share/man
+checksums               md5     da2b5de278e96a5b907c2e2304bf6542
+
+patchfiles              patch-gnet.m4
+
+configure.args          --mandir=${prefix}/share/man
 
 if {![variant_isset glib1]} {
-	default_variants +glib2
+    default_variants +glib2
 }
 
-variant glib1 conflicts glib2 description {Use glib1} { depends_lib port:glib1 }
-variant glib2 conflicts glib1 description {Use glib2} { depends_lib path:lib/pkgconfig/glib-2.0.pc:glib2
-		  configure.args-append --enable-glib2 }
+variant glib1 conflicts glib2 description {Use glib1} {
+    depends_lib             port:glib1
+}
+variant glib2 conflicts glib1 description {Use glib2} {
+    depends_lib             path:lib/pkgconfig/glib-2.0.pc:glib2
+    configure.args-append   --enable-glib2
+}
