gnet: append to depends_lib in variants rather than overwriting
git-svn-id: https://svn.macports.org/repository/macports/trunk@71320 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnet/Portfile
+++ b/dports/devel/gnet/Portfile
@@ -29,9 +29,9 @@ if {![variant_isset glib1]} {
 }
 
 variant glib1 conflicts glib2 description {Use glib1} {
-    depends_lib             port:glib1
+    depends_lib-append      port:glib1
 }
 variant glib2 conflicts glib1 description {Use glib2} {
-    depends_lib             path:lib/pkgconfig/glib-2.0.pc:glib2
+    depends_lib-append      path:lib/pkgconfig/glib-2.0.pc:glib2
     configure.args-append   --enable-glib2
 }
