--- a/dports/devel/gnet/Portfile
+++ b/dports/devel/gnet/Portfile
@@ -4,8 +4,7 @@
 PortSystem              1.0
 
 name                    gnet
-version                 1.1.8
-revision                2
+version                 1.1.9
 categories              devel
 platforms               darwin
 maintainers             nomaintainer
@@ -18,11 +17,12 @@ long_description        GNet is a simple network library written in C.  It is \
 homepage                http://live.gnome.org/GNetLibrary
 master_sites            freebsd
 
-checksums               md5     da2b5de278e96a5b907c2e2304bf6542
+checksums               sha1    ba11b517af06e84f710527d29a047f8a2603d4b3 \
+                        rmd160  485cf7b3f03dbe274e0c39b5d6257c99e94e8dfb
 
 patchfiles              patch-gnet.m4
 
-configure.args          --mandir=${prefix}/share/man
+use_autoreconf          yes
 
 if {![variant_isset glib1]} {
     default_variants +glib2
