gnet2: add comment explaining why universal is disabled
git-svn-id: https://svn.macports.org/repository/macports/trunk@71323 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnet2/Portfile
+++ b/dports/devel/gnet2/Portfile
@@ -27,6 +27,7 @@ depends_lib             path:lib/pkgconfig/glib-2.0.pc:glib2 \
                         port:gettext \
                         port:libiconv
 
+# /usr/bin/ranlib: library member: libgnetxmlrpc.a(libgnet-2.0.la) is not an object file (not allowed in a library with multiple architectures)
 universal_variant       no
 
 post-configure {
