gnomeicu: update to 0.99.14, use port:-style dependencies, remove unnecessary -L flag in CPPFLAGS
git-svn-id: https://svn.macports.org/repository/macports/trunk@71324 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnomeicu/Portfile
+++ b/dports/gnome/gnomeicu/Portfile
@@ -1,7 +1,7 @@
 # $Id$
 PortSystem 1.0
 name		gnomeicu
-version		0.99
+version		0.99.14
 description	GnomeICU is one of the most popular ICQ programs in the world.
 long_description        GnomeICU is one of the most popular UN*X-based \
 			ICQ programs in the world. Internet chatting has \
@@ -15,10 +15,14 @@ categories	gnome
 platforms	darwin 
 homepage	http://gnomeicu.sourceforge.net/
 master_sites	sourceforge
-checksums	md5 d5e49557a3ed3545b98c3749257e58ef
+
+checksums	sha1    8b153d5d79c39c12d17e84a95c4a6830a297873a \
+		rmd160  a5201dcbf4a1cd961243798d48a529497013a209
+
 use_bzip2	yes
-patchfiles	patch_userserver.c patch_icu_db.c
-depends_lib     lib:libgnet:gnet lib:libgdbm:gdbm bin:gnome-session:gnome-session
-configure.cppflags-append "-L${prefix}/lib"
+patchfiles	patch_icu_db.c
+
+depends_lib	port:gnet port:gdbm port:gnome-session
+
 configure.cflags-append -flat_namespace -undefined suppress -DHAVE_NDBM=0
 configure.args	 --with-ndbm=no --with-gdbm=yes
