--- a/dports/gnome/gnomeicu/Portfile
+++ b/dports/gnome/gnomeicu/Portfile
@@ -1,28 +1,40 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
-PortSystem 1.0
-name		gnomeicu
-version		0.99.14
-description	GnomeICU is one of the most popular ICQ programs in the world.
+
+PortSystem              1.0
+
+name                    gnomeicu
+version                 0.99.14
+categories              gnome
+platforms               darwin
+maintainers             nomaintainer
+
+description             GnomeICU is one of the most popular ICQ programs in the world.
+
 long_description        GnomeICU is one of the most popular UN*X-based \
-			ICQ programs in the world. Internet chatting has \
-			quickly become one of the most popular uses of the \
-			Internet - second only to Email. Instant messaging \
-			allows users to communicate in real time with friends, \
-			family members, and coworkers in an efficient, \
-			unobtrusive manner.
-maintainers	nomaintainer
-categories	gnome
-platforms	darwin 
-homepage	http://gnomeicu.sourceforge.net/
-master_sites	sourceforge
+                        ICQ programs in the world. Internet chatting has \
+                        quickly become one of the most popular uses of the \
+                        Internet - second only to Email. Instant messaging \
+                        allows users to communicate in real time with friends, \
+                        family members, and coworkers in an efficient, \
+                        unobtrusive manner.
 
-checksums	sha1    8b153d5d79c39c12d17e84a95c4a6830a297873a \
-		rmd160  a5201dcbf4a1cd961243798d48a529497013a209
+homepage                http://gnomeicu.sourceforge.net/
+master_sites            sourceforge
+use_bzip2               yes
 
-use_bzip2	yes
-patchfiles	patch_icu_db.c
+checksums               sha1    8b153d5d79c39c12d17e84a95c4a6830a297873a \
+                        rmd160  a5201dcbf4a1cd961243798d48a529497013a209
 
-depends_lib	port:gnet port:gdbm port:gnome-session
+depends_lib             port:gnet \
+                        port:gdbm \
+                        port:gnome-session
 
-configure.cflags-append -flat_namespace -undefined suppress -DHAVE_NDBM=0
-configure.args	 --with-ndbm=no --with-gdbm=yes
+patchfiles              patch_icu_db.c
+
+configure.cflags-append -flat_namespace \
+                        -undefined suppress \
+                        -DHAVE_NDBM=0
+
+configure.args          --with-ndbm=no \
+                        --with-gdbm=yes
