alienarena: oh, just fix the line endings in all the files
git-svn-id: https://svn.macports.org/repository/macports/trunk@71326 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -64,10 +64,15 @@ patch.dir               ${worksrcpath}/source
 
 post-extract {
     # DOS to UNIX line endings so we can patch properly.
-    reinplace "s|\r||g" ${patch.dir}/game/q_shared.h \
-                        ${patch.dir}/qcommon/common.c \
-                        ${patch.dir}/ref_gl/r_main.c \
-                        ${patch.dir}/ref_gl/r_model.h
+    fs-traverse file ${patch.dir} {
+        switch [file extension ${file}] {
+            .c -
+            .cpp -
+            .h {
+                reinplace "s|\r||g" ${file}
+            }
+        }
+    }
 }
 
 patchfiles              patch-game-q_shared.h.diff \
