Added p5-moosex-multiinitarg and p5-net-oauth ports, needed by Net::Twitter 3.13008. p5-net-twitter: took (open)maintainership, update to 3.13008.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71327 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-net-twitter/Portfile
+++ b/dports/perl/p5-net-twitter/Portfile
@@ -1,20 +1,31 @@
 # $Id$
 
-PortSystem	1.0
-PortGroup	perl5 1.0
-categories	perl net
-platforms	darwin
-perl5.setup	Net-Twitter 1.04
-maintainers	nomaintainer
-description	Module to set your twitter status, as well as the statuses of \
-			your friends.
-long_description ${description}
+PortSystem          1.0
+PortGroup           perl5 1.0
+categories          perl net
+platforms           darwin
+perl5.setup         Net-Twitter 3.13008
+maintainers         vinc17 openmaintainer
+description         A Perl interface to the Twitter API
+long_description    ${description}.
 
-checksums	md5 18386478d654fb55df693b0ace591726 \
-		sha1 603c7f13b4a337b7cc51899f6d541568180c3582 \
-		rmd160 5f76acacb5cc9bc6db6589d35277d07dce73c860
+checksums           md5     79cf14c440da08004656beb3667c3396 \
+                    sha1    4d0eea2dc3df5abb224b76e02d377e3a55402bbe \
+                    rmd160  b7f04f6406ec1c8efa6960a8f8031c24f28256a6
 
-depends_lib-append	port:p5-json-any \
-					port:p5-libwww-perl
+depends_lib-append \
+  port:p5-data-visitor \
+  port:p5-datetime \
+  port:p5-datetime-format-strptime \
+  port:p5-encode \
+  port:p5-html-parser \
+  port:p5-libwww-perl \
+  port:p5-json-any \
+  port:p5-moose \
+  port:p5-moosex-multiinitarg \
+  port:p5-namespace-autoclean \
+  port:p5-net-oauth \
+  port:p5-uri \
+  port:p5-try-tiny
 
 supported_archs noarch
