multimedia/avidemux: make cmake output more verbose
git-svn-id: https://svn.macports.org/repository/macports/trunk@71330 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/avidemux/Portfile
+++ b/dports/multimedia/avidemux/Portfile
@@ -52,13 +52,14 @@ destroot.dir        ${workpath}/build
 
 configure.args-append \
                     -DMAC_BUNDLE_DIR=${applications_dir} \
+                    -DVERBOSE=ON \
                     -DGTK=ON \
                     -DQT4=OFF \
                     -DFONTCONFIG=ON \
                     -DGETTEXT=ON \
                     -DUSE_SYSTEM_SPIDERMONKEY=ON \
                     -DSPIDERMONKEY_INCLUDE_DIR=${prefix}/include/js \
-                    -DSPIDERMONKEY_LIBRARY_DIR=${prefix}/lib/libjs.dylib \
+                    -DSPIDERMONKEY_LIBRARY_DIR=${prefix}/lib/libjs.dylib
 
 # SDL uses Quickdraw API, fails on 64-bit
 # Xvideo is disabled for OS X, but probably could work
