ImageMagick: remove erroneous backslashes
git-svn-id: https://svn.macports.org/repository/macports/trunk@71332 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ImageMagick/Portfile
+++ b/dports/graphics/ImageMagick/Portfile
@@ -37,8 +37,8 @@ master_sites                http://image_magick.veidrodis.com/image_magick/ \
                             ftp://ftp.imagemagick.net/pub/${name}/ \
                             ftp://ftp.fifi.org/pub/ImageMagick/
 #                            sourceforge:imagemagick
-#                            http://ftp.surfnet.nl/pub/ImageMagick/ \
-#                            ftp://ftp.nluug.nl/pub/${name}/ \
+#                            http://ftp.surfnet.nl/pub/ImageMagick/
+#                            ftp://ftp.nluug.nl/pub/${name}/
 
 checksums                   md5     7647b6f6c950ed5d1b9d16246c1fab05 \
                             sha1    83168c5bb2a71dff658d5dc3a9d3ca7a72b80287 \
@@ -181,7 +181,7 @@ variant no_x11 {
     depends_lib-delete      port:xorg-libXext \
                             port:xorg-libXt
     archcheck.files-delete  lib/libXext.dylib \
-                            lib/libXt.dylib \
+                            lib/libXt.dylib
     configure.args-delete   --with-x
     configure.args-append   --without-x
 }
