--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 
 name                        libhsplasma
 version                     0.0-585
+revision                    1
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -22,10 +23,14 @@ fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
 hg.tag                      df78076691f2
 
+depends_build               port:coreutils
+
 depends_lib                 port:zlib \
                             port:jpeg \
                             port:openssl \
                             port:python26
+
+patchfiles                  patch-cp-parents
 
 universal_variant           no
 
@@ -44,6 +49,7 @@ pre-configure {
 
 build.args                  CXX=${configure.cxx}
 
+destroot.target             install-dev
 destroot.destdir            PREFIX=${destroot}${prefix}
 
 livecheck.type              regex
