libhsplasma: fix pkgconfig files to not contain path to destroot
git-svn-id: https://svn.macports.org/repository/macports/trunk@71334 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 
 name                        libhsplasma
 version                     0.0-585
-revision                    1
+revision                    2
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -51,6 +51,10 @@ build.args                  CXX=${configure.cxx}
 
 destroot.target             install-dev
 destroot.destdir            PREFIX=${destroot}${prefix}
+
+post-destroot {
+    eval reinplace "s|${destroot}||g" [glob ${destroot}${prefix}/lib/pkgconfig/*.pc]
+}
 
 livecheck.type              regex
 livecheck.url               ${hg.url}
