libgda4: disable GObject introspection, build breaks if port gobject-introspection is installed.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71335 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -69,6 +69,7 @@ configure.env-append  INTLTOOL_PERL=${configure.perl}
 configure.args  --mandir=${prefix}/share/man \
                 --with-bdb=${prefix} \
                 --enable-system-sqlite \
+                --disable-introspection \
                 --without-odbc \
                 --without-mysql \
                 --without-msql \
