tokyocabinet: fix homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71336 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/tokyocabinet/Portfile
+++ b/dports/databases/tokyocabinet/Portfile
@@ -20,7 +20,7 @@ long_description    \
     and a value.  There is neither concept of data tables nor data types. \
     Records are organized in hash table or B+ tree.
 
-homepage            http://1978th.net/tokyocabinet/
+homepage            http://fallabs.com/tokyocabinet/
 master_sites        ${homepage}
 
 checksums           md5     341dadd1f3d68760e350f7e731111786 \
