pdftk: added patch to avoid CreationDate and ModDate corruption (maintainer timeout). Closes #22265.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71337 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/pdftk/Portfile
+++ b/dports/textproc/pdftk/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    pdftk
 version                 1.41
-revision                1
+revision                2
 categories              textproc graphics pdf
 maintainers             ryandesign
 platforms               darwin
@@ -91,3 +91,7 @@ variant with_gcc42 conflicts with_gcc41 description {Build using gcc42} {
 if { (![variant_exists with_gcc41] || ![variant_isset with_gcc41]) && ![variant_isset with_gcc42] } {
     default_variants    +with_gcc42
 }
+
+# Patch based on handle_utf8_data_in_update_info from the Debian package pdftk.
+patchfiles      patch-report.cc.diff
+patch.args      -p2
